# oil-lab

./: CMakeLists.txt  functions.cpp  functions.h  functions_Laplace.cpp  functions_Laplace.h  functions_Poisson.cpp  functions_Poisson.h  functions_general.cpp  functions_general.h  global.cpp  main.cpp
